--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   http: ^0.12.1
   flutter_spinkit: "^4.1.2"
   w3c_event_source: ^1.3.2
+  shared_preferences: ^0.5.7+3
 
 
 dev_dependencies:
