--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   provider:
   validators: ^2.0.0
   http: ^0.12.1
-  flutter_spinkit: "^4.1.2"
+  loading_overlay: ^0.2.1
   w3c_event_source: ^1.3.2
   shared_preferences: ^0.5.7+3
 
